# golf-coach

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PUBLISHING.md  README.md  REVIEW.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
docs/: golfgamebook-api.md  trackman-api.md
mcpb/: .mcpbignore  manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/: check-visualization.py  eval_analyzer.py  gamebook_eval.py  install-refresh-schedule.sh  refresh-token.sh  release.sh  validate.py  visualize.py
skills/at-home-practice-feedback/: PROMPT.md  SKILL.md
skills/drill-library/: PROMPT.md  SKILL.md
skills/gamebook-screenshot-analysis/: PROMPT.md  SKILL.md
skills/golf-coaching/: PROMPT.md  SKILL.md
skills/golf-practice-at-home/: PROMPT.md  SKILL.md
skills/grip-check/: PROMPT.md  (+1 more)
tests/: test_analysis.py  test_analyzers.py  test_client.py  test_config.py  test_delivery.py  test_gamebook_analysis.py  test_gamebook_skill.py  test_gamebook_source.py  test_gamebook_store.py  test_gamebook_tool.py  test_grip_check_skill.py  test_login_recovery.py  test_login_stdout.py  test_model.py  test_prompts.py  test_queries.py  test_ranking.py  test_server.py  test_session_store.py  test_setup.py  test_skill_content.py  test_sources_registry.py  test_storage.py  test_swing_video_skill.py  test_synthesis.py  test_synthesis_delta.py  test_synthesis_integration.py  test_token_store.py  test_trackman_source.py  test_training_store.py  test_verify.py  test_verify_tool.py  test_version.py  test_visualize.py
(+52 files in other folders)
